--- a/src/vista/JPanelCampaña.form
+++ b/src/vista/JPanelCampaña.form
@@ -27,14 +27,12 @@
                       <Component id="jComboBox1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jModulo" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jImportarC" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jExportarC" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="jBorrarC" alignment="0" max="32767" attributes="0"/>
-                              <Component id="jMedidas" alignment="0" max="32767" attributes="0"/>
-                          </Group>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="jImportarC" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jExportarC" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jBorrarC" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jMedidas" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jModulo" alignment="0" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jScrollPane1" max="32767" attributes="0"/>
