--- a/src/vista/JPanelModulo.form
+++ b/src/vista/JPanelModulo.form
@@ -91,7 +91,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButtonModificar">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Modiificar"/>
+        <Property name="text" type="java.lang.String" value="Modificar"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
     </Component>
