--- a/src/vista/JPanelCampaña.form
+++ b/src/vista/JPanelCampaña.form
@@ -108,16 +108,19 @@
     <Component class="javax.swing.JButton" name="jExportarC">
       <Properties>
         <Property name="text" type="java.lang.String" value="Exportar"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jBorrarC">
       <Properties>
         <Property name="text" type="java.lang.String" value="Borrar"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jMedidas">
       <Properties>
         <Property name="text" type="java.lang.String" value="Medidas"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jModulo">
@@ -134,14 +137,8 @@
       <SubComponents>
         <Component class="javax.swing.JList" name="jListC">
           <Properties>
-            <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-              <StringArray count="5">
-                <StringItem index="0" value="Item 1"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
-                <StringItem index="4" value="Item 5"/>
-              </StringArray>
+            <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="new ListModelCampanya()" type="code"/>
             </Property>
           </Properties>
           <AuxValues>
