Requisito 2.3 comprobado que funciona y retoques en la interfaz grafica de campaña.

--- a/src/vista/JPanelModulo.form
+++ b/src/vista/JPanelModulo.form
@@ -23,8 +23,8 @@
                   <Component id="jButtonCampanyas" max="32767" attributes="0"/>
                   <Component id="jButtonBorrar" alignment="0" max="32767" attributes="0"/>
                   <Component id="jButtonModificar" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jButtonExportar" alignment="0" max="32767" attributes="0"/>
                   <Component id="jButtonImportar" alignment="0" max="32767" attributes="0"/>
+                  <Component id="jButtonExportar" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -52,7 +52,7 @@
               <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="jButtonImportar" min="-2" max="-2" attributes="0"/>
+                      <Component id="jButtonImportar" min="-2" pref="23" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jButtonExportar" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
