Integrada la solución en el programa principal. - Falla módulo, no lee bien (Elias).

--- a/src/vista/campanya/JPanelCampaña.form
+++ b/src/vista/campanya/JPanelCampaña.form
@@ -65,10 +65,11 @@
                       <Component id="jMedidas" min="-2" pref="28" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jModulo" min="-2" pref="28" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="23" max="32767" attributes="0"/>
                   </Group>
-                  <Component id="jScrollPane1" min="-2" pref="175" max="-2" attributes="0"/>
+                  <Component id="jScrollPane1" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="64" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
