--- a/src/vista/modulo/JPanelModulo.form
+++ b/src/vista/modulo/JPanelModulo.form
@@ -17,67 +17,38 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="jLabel1" alignment="0" min="-2" pref="75" max="-2" attributes="0"/>
-                  <Component id="jButtonCampanyas" max="32767" attributes="0"/>
-                  <Component id="jButtonBorrar" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jButtonModificar" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jButtonImportar" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jButtonExportar" alignment="0" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="jButtonExportar" linkSize="1" min="-2" pref="83" max="-2" attributes="0"/>
+                  <Component id="jButtonImportar" linkSize="1" min="-2" pref="83" max="-2" attributes="0"/>
+                  <Component id="jButtonModificar" linkSize="1" alignment="1" min="-2" pref="83" max="-2" attributes="0"/>
+                  <Component id="jButtonBorrar" linkSize="1" alignment="1" min="-2" pref="83" max="-2" attributes="0"/>
+                  <Component id="jButtonCampanyas" linkSize="1" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPaneListaModulos" pref="279" max="32767" attributes="0"/>
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                      <Component id="jLabelIdioma" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jComboBoxIdioma" min="-2" pref="90" max="-2" attributes="0"/>
-                  </Group>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="jScrollPaneListaModulos" pref="289" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel1" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
-                  <Component id="jComboBoxIdioma" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabelIdioma" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <Component id="jButtonImportar" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="jButtonExportar" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="jButtonModificar" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="jButtonBorrar" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
-                      <Component id="jButtonCampanyas" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Component id="jScrollPaneListaModulos" max="32767" attributes="0"/>
-              </Group>
+          <Component id="jScrollPaneListaModulos" max="32767" attributes="0"/>
+          <Group type="102" attributes="0">
+              <Component id="jButtonImportar" linkSize="2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
+              <Component id="jButtonExportar" linkSize="2" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jButtonModificar" linkSize="2" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jButtonBorrar" linkSize="2" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jButtonCampanyas" linkSize="2" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="22" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="jLabel1">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Tahoma" size="14" style="1"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="M&#xd3;DULOS"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JButton" name="jButtonImportar">
       <Properties>
         <Property name="text" type="java.lang.String" value="Importar"/>
@@ -126,25 +97,5 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JComboBox" name="jComboBoxIdioma">
-      <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
-          </StringArray>
-        </Property>
-      </Properties>
-      <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-      </AuxValues>
-    </Component>
-    <Component class="javax.swing.JLabel" name="jLabelIdioma">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Idioma:"/>
-      </Properties>
-    </Component>
   </SubComponents>
 </Form>
